<resources>
    <string name="app_name">RestDemo</string>
    <string name="zone_list_title">Zones</string>
    <string name="camera_list_title">Live viewing</string>
    <string name="zone_list_header">Zones</string>
    <string name="loading_zones_error">There was an error retrieving the zones</string>
    <string name="camera_list_activity_title">Camera List</string>
    <string name="zone_filter_menu_item">Zone</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="error_loading_cameras">There was an error loading the camera list.</string>
    <string name="settings_title">Settings</string>
    <string name="footage_title">Footage</string>
    <string name="support_title">Support</string>
    <string name="recording_switch_title">Recording</string>
    <string name="error_loading_user">There was an error loading the user details.</string>
</resources>
