<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_actions_group"
        android:checkableBehavior="single">


        <item
            android:id="@+id/camera_list_menu_item"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/camera_list_title"/>

        <item
            android:id="@+id/zone_list_menu_item"
            android:icon="@drawable/ic_list"
            android:title="@string/zone_list_title"/>

        <item
            android:id="@+id/footage_menu_item"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/footage_title"/>
    </group>
    <group
        android:id="@+id/menu_extra_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/support_menu_item"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/support_title"/>


        <item
            android:id="@+id/settings_menu_item"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_title"/>
    </group>
</menu>